# mavka

./: .all-contributorsrc  .clang-format  .eslintrc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  build.sh  builtinsBundle.js  checkVersion.js  dist.sh  ext.cpp  extension.c  main.js  mavka.c  mavka.cpp  mtests.sh  package-lock.json  package.json  package.sh  run.js  run.sh  start.c  test.html  testbuild.sh  tgbot.js  version.js  x.js  x.lua  x.py  x.rb  x.sh  БУДЦ  БібліотекаМавки.в.ц  ВЕРСІЯ  Версія  ДОЗВІЛ  (+63 more)
.github/workflows/: build-artifacts.yml  deploy.yml  prepare-sh.yml
.плавлення/: мавка.ll
include/: mavka_api_v0.h
mama/: MaCallFrame.cpp  MaCallFrame.h  MaFrame.cpp  MaFrame.h  MaInstruction.cpp  MaInstruction.h  MaObject.h  MaScope.h  README.md  helpers.cpp  helpers.h  interpreter.cpp  mama.cpp  mama.h  objects.h  run.cpp
mama/compiler/: compiler.cpp  compiler.h  ops.h
mama/interpreter/: do_ADD.h  do_AND.h  do_BNOT.h  do_BOR.h  do_CALL.h  do_CLEAR_ARGS.h  do_DIV.h  do_EQ.h  do_GE.h  do_GET.h  do_GET_ELEMENT.h  do_JUMP.h  do_JUMP_IF_FALSE.h  do_LOAD_PARAM.h  do_MOD.h  do_MUL.h  do_NE.h  do_NEGATIVE.h  do_OR.h  do_POW.h  do_PUSH_ARGS.h  do_PUSH_STRING.h  do_RETURN.h  do_SET_ARG.h  do_SET_ELEMENT.h  do_STORE_DIIA.h  do_XOR.h  interpreter.cpp
mama/objects/: MaDict.cpp  MaDiia.cpp  MaList.cpp  MaLogical.cpp  MaModule.cpp  MaNumber.cpp  MaObject.cpp  MaString.cpp  MaStructure.cpp
mama/parser/: ast.cpp  ast.h  parser.cpp  parser.h
mama/parser/syntax/: CMakeLists.txt  MavkaLexer.cpp  MavkaLexer.g4  MavkaLexer.h  MavkaLexer.interp  MavkaParser.cpp  MavkaParser.g4  MavkaParser.h  MavkaParser.interp  MavkaParser.tokens  MavkaParserBaseListener.h  MavkaParserBaseVisitor.h  MavkaParserListener.h  MavkaParserVisitor.h
mama/parser/syntax/antlr4-cpp-runtime/: CMakeLists.txt  Makefile  cmake_install.cmake
mama/parser/syntax/antlr4-cpp-runtime/runtime/: CMakeLists.txt  Makefile  cmake_install.cmake
mtests/: 1_текст_тест.м  текст_тест.м
scripts/: build.sh  build_deps.sh  build_tsil.sh  download_libs.sh  icon.res  package.sh  package_platform.sh  package_source.sh  release.sh  test.sh  test.ts  test64lww.sh
src/: all-libs.js  all-modules.js  builders.js  cleanEval.js  context.js  diia.js  error.js  interpreter.js  main.cpp  main.js  mavka.cpp  mavka.h  pak.js  runner.js  scope.js  take.cpp  utils.js  тест.м
utils/: tools.cpp
БЦ/: bib.c  turbo.c  Виділяч.ю8.в  КД.ц  Реєстр.ю8.в  біб.ц  цілеспрямовано.ю8.в
БібліотекаМавки/: БібліотекаМавки.ц
КД/: КД.в  КД.ц  КД.ю8.в  КД.ю8.ц
МаМа/: .gitignore  404.html  README.md  БазаНазв.ц  Допоміжне.ц  Допоміжне.ю8.ц  Дія.ц  Код.ц  Компілятор.ц  Контрибуторам  МаМа.в  МаМа.в.ц  МаМа.ю8.в  Машина.ц  Машина.ю8.ц  Назва.ц  НативнаДія.ц  Обʼєкт.ц  ОбʼєктАдреси.ц  ОбʼєктБайтів.ц  ОбʼєктДії.ц  ОбʼєктЛогічного.ц  ОбʼєктМодуля.ц  ОбʼєктНативноїДії.ц  ОбʼєктПеребору.ц  ОбʼєктСловника.ц  ОбʼєктСписку.ц  ОбʼєктСтруктури.ц  ОбʼєктТексту.ц  ОбʼєктЧисла.ц  ОбʼєктЮнікоду.ц  Очищувач.ц  Очищувач.ю8.ц  Помилка.ц  Право  Предмет.ц  Предмет.ю8.ц  ПредметАдреси.ц  ПредметБайтів.ц  ПредметБайтів.ю8.ц  (+56 more)
РМв1/: РМв1.в
біб/: .gitignore  bib.c  turbo.c  Виділяч.в  Виділяч.ю8.в  Друк.в  Друк.ю8.в  Кодування.ю8.в  Накопичувач.ю8.в  Реєстр.в  турбо.в  турбо.ю8.в  цілеспрямовано.ю8.в  ірк.м
бібліотека/: json.м  М.м  бібліотека.ц  дід.м  запит.м  математика.ц  сервер.м  фс.м  читати.м  читати.ц
бібліотека_мавки/: бібліотека_мавки.c  бібліотека_мавки.в.ц  бібліотека_мавки.ц
визначення/: РМв1.в  РМв1.в.ц  бібліотека_мавки.в.ц  мавка.в  мавка.в.ц
вп/: json.м  М.м  дід.js  дід.м  запит.м  сервер.js  сервер.м  фс.м  читати.м
джеджалик/: джеджалик.js
допоміжне/: БуферЮ8.в  НакопичувачЮ8.в  біб.в  вектор.в  накопичувач.в  накопичувач32.в  реєстр.в  різне.в  черга.в
зміни/: 0.111.0  0.112.0
мавка/: ІменованоЗадіяні.ц  КД.ц  Машина.ц  Перекладач.ц  Послідовність.ц  ПредметДаних.ц  ПредметДробового.ц  ПредметДіапазонуДробових.ц  ПредметДіапазонуЦілих.ц  ПредметДії.ц  ПредметЗміннихДаних.ц  ПредметПараметра.ц  ПредметПереборуДіапазонуДробових.ц  ПредметСловника.ц  ПредметСписку.ц  ПредметСтруктури.ц  ПредметТексту.ц  біб.в  версія.в  глобальні.ц  глобальні.ю8.ц  допоміжне.ц  компілятор.в  компілятор.ц  мавка.js  мавка.в  мавка.ц  мавка.ю8.ц  мавка_втілення.в  математика.ц  перекладач.ц  розбирач.ц  різне.в  система.ц
машина/: LICENSE  README.md  ІменованоЗадіяні.ц  ІнформаціяПадіння.ц  ВЕРСІЯ  Взяти.ц  ВзятіЗначення.ц  Вивід.ц  Властивості.ц  ДОЗВІЛ  Допоміжне.к  Допоміжне.ц  Допоміжне.ю8.ц  Дійсність.ц  Діячі.ц  Задіяні.ц  Значення.ц  КористувацькіДані.ц  Машина.к  Машина.ц  Машина.ю8.ц  МісцезнаходженняВказівок.ц  НакопичувачЗначень.ц  НакопичувачТексту.ц  Очищувач.ц  Очищувач.ю8.ц  Послідовність.ц  Предмет.ю8.ц  ПредметБайтів.ю8.ц  ПредметБуфера.ю8.ц  ПредметДаних.ц  ПредметДробового.ц  ПредметДіапазонуДробових.ц  ПредметДіапазонуЦілих.ц  ПредметДіапазонуЧисел.ю8.ц  ПредметДії.ц  ПредметДії.ю8.ц  ПредметЗміннихДаних.ц  ПредметКоду.ц  ПредметКоду.ю8.ц  (+35 more)
непотріб/: ext_hello.cpp  М.м  РМв1.в  привіт.м  розширення_привіт.ll  розширення_привіт.ц  скомпілювати_розширення_привіт.sh  тест.м
означення/: КД.о.ц  РМв1.о.ц  бібліотека_мавки.о.ц  мавка.о.ц  машина_мавки.о.ц  перекладач_мавки.о.ц  перетворювач_мавки.о.ц  пристрій_мавки.о.ц  розбирач_мавки.о.ц
організація/: докс.json  організація.md  приєднатись.md  юридичне.md
пак/: пак.js
перекладач/: перекладач.ц
перетворювач/: перетворювач.ц
пристрій/: prystriy.c  взяти_файл.ц  вивід.ц  глобальні.ц  діалог.ц  машина.ц  пристрій.ц  розмова.ц
розбирач/: розбирач.ц
різне/: лексер.ll  лексер.ц  мавка.г  мавка.граматика  мавка.р
сб/: глобальний_контекст.дія  математика.дія  файлова_система.дія  фс.дія
скрипти/: випуск.sh  збудувати.sh  збудувати_для_windows.sh  згенерувати_для_будування_на_windows.sh  почистити.sh
тексти/: Будування  Ліцензія  Тестування
тестування/: test.sh  тестувати.sh
турбо/: build_echo.sh  flood.sh  turbo.c  ехо.ц  турбо.в
часопис/: вступ.md  докс.json
інформація/: докс.json  передісторія.md  соцмережі.md
(+1185 files in other folders)
